write swagger document for apis
